added main file

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_HOST="test-pstgr-nd.fsrar.ru"
+DB_HOST="localhost"
 DB_PORT=5432
-DB_USER="ci"
-DB_PASS="ci"
-DB_NAME="conductor"
+DB_USER="postgres"
+DB_PASS="1234567890"
+DB_NAME="postgres"
